[gd_scene load_steps=59 format=3 uid="uid://cmwa0mh7vfd1j"]

[ext_resource type="Script" path="res://scenes/first_boss/first_boss.gd" id="1_cjwql"]
[ext_resource type="PackedScene" uid="uid://bpg7agf87jvm2" path="res://scenes/projectiles/boss_rocket.tscn" id="2_6lh6p"]
[ext_resource type="Texture2D" uid="uid://x8gfucvagfwn" path="res://assets/recent/Enemies/Kla'ed/Destruction/PNGs/Kla'ed - Torpedo Ship - Destruction.png" id="2_u4quw"]
[ext_resource type="Texture2D" uid="uid://bsf4y64jnjn6j" path="res://assets/recent/Enemies/Kla'ed/Weapons/PNGs/Kla'ed - Torpedo Ship - Weapons.png" id="3_vyx77"]
[ext_resource type="Texture2D" uid="uid://dhrioem2m2ohh" path="res://assets/recent/Enemies/Kla'ed/Base/PNGs/Kla'ed - Torpedo Ship - Base.png" id="4_hrkta"]
[ext_resource type="Texture2D" uid="uid://d3eh7iekekjdq" path="res://assets/recent/Enemies/Kla'ed/Shield/PNGs/Kla'ed - Torpedo Ship - Shield.png" id="5_p0k5r"]
[ext_resource type="Texture2D" uid="uid://dxkdcai521ijj" path="res://assets/recent/Enemies/Kla'ed/Engine/PNGs/Kla'ed - Torpedo Ship - Engine.png" id="6_ldltq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2rylg"]
atlas = ExtResource("2_u4quw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5hvi"]
atlas = ExtResource("2_u4quw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10ufg"]
atlas = ExtResource("2_u4quw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x24d"]
atlas = ExtResource("2_u4quw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlji6"]
atlas = ExtResource("2_u4quw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agf2f"]
atlas = ExtResource("2_u4quw")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h13o2"]
atlas = ExtResource("2_u4quw")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqd6r"]
atlas = ExtResource("2_u4quw")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12t38"]
atlas = ExtResource("2_u4quw")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpuob"]
atlas = ExtResource("2_u4quw")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v01p"]
atlas = ExtResource("3_vyx77")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1th83"]
atlas = ExtResource("3_vyx77")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyrk2"]
atlas = ExtResource("3_vyx77")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x3e2"]
atlas = ExtResource("3_vyx77")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtwe1"]
atlas = ExtResource("3_vyx77")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxvag"]
atlas = ExtResource("3_vyx77")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svwkg"]
atlas = ExtResource("3_vyx77")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yssm2"]
atlas = ExtResource("3_vyx77")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b30ng"]
atlas = ExtResource("3_vyx77")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgx1x"]
atlas = ExtResource("3_vyx77")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewcv"]
atlas = ExtResource("3_vyx77")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vntyt"]
atlas = ExtResource("3_vyx77")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc248"]
atlas = ExtResource("3_vyx77")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2hdg"]
atlas = ExtResource("3_vyx77")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fncp7"]
atlas = ExtResource("3_vyx77")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ly4"]
atlas = ExtResource("3_vyx77")
region = Rect2(960, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gnjei"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rylg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5hvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10ufg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x24d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlji6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agf2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h13o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqd6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12t38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpuob")
}],
"loop": false,
"name": &"destruction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v01p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1th83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyrk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x3e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtwe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxvag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svwkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yssm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b30ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgx1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vntyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc248")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2hdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fncp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1ly4")
}],
"loop": true,
"name": &"fire",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hrkta")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iwg1p"]
atlas = ExtResource("5_p0k5r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3gat"]
atlas = ExtResource("5_p0k5r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8am8h"]
atlas = ExtResource("5_p0k5r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7aet"]
atlas = ExtResource("5_p0k5r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwnv6"]
atlas = ExtResource("5_p0k5r")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pxts"]
atlas = ExtResource("5_p0k5r")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evf41"]
atlas = ExtResource("5_p0k5r")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqsj4"]
atlas = ExtResource("5_p0k5r")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpyq7"]
atlas = ExtResource("5_p0k5r")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h4xk"]
atlas = ExtResource("5_p0k5r")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sr57v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwg1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3gat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8am8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7aet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwnv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pxts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evf41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqsj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpyq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h4xk")
}],
"loop": false,
"name": &"shield",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7uf81"]
atlas = ExtResource("6_ldltq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b3k1"]
atlas = ExtResource("6_ldltq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnnvp"]
atlas = ExtResource("6_ldltq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_df4oi"]
atlas = ExtResource("6_ldltq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3kye"]
atlas = ExtResource("6_ldltq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lwai"]
atlas = ExtResource("6_ldltq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bt67"]
atlas = ExtResource("6_ldltq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cqv3"]
atlas = ExtResource("6_ldltq")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ocl"]
atlas = ExtResource("6_ldltq")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u03q"]
atlas = ExtResource("6_ldltq")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6got"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uf81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b3k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnnvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df4oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3kye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lwai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bt67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cqv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6ocl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u03q")
}],
"loop": true,
"name": &"engine",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w24kn"]
size = Vector2(56, 8.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8qy70"]
radius = 3.0
height = 20.0

[node name="FirstBoss" type="Area2D"]
scale = Vector2(4, 4)
script = ExtResource("1_cjwql")
rocket = ExtResource("2_6lh6p")

[node name="Ship" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gnjei")
animation = &"fire"
flip_v = true

[node name="Shield" type="AnimatedSprite2D" parent="Ship"]
visible = false
sprite_frames = SubResource("SpriteFrames_sr57v")
animation = &"shield"
frame = 9
frame_progress = 1.0
flip_v = true

[node name="Engine" type="AnimatedSprite2D" parent="Ship"]
sprite_frames = SubResource("SpriteFrames_f6got")
animation = &"engine"
frame = 3
frame_progress = 0.780143
flip_v = true

[node name="GeneralCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_w24kn")

[node name="CriticalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8qy70")

[node name="ShotOne" type="Marker2D" parent="."]
position = Vector2(8.75, 15)

[node name="ShotTwo" type="Marker2D" parent="."]
position = Vector2(14.75, 15)

[node name="ShotThree" type="Marker2D" parent="."]
position = Vector2(20.5, 15.25)

[node name="ShotFour" type="Marker2D" parent="."]
position = Vector2(-8.25, 15)

[node name="ShotFive" type="Marker2D" parent="."]
position = Vector2(-14.5, 15)

[node name="ShotSix" type="Marker2D" parent="."]
position = Vector2(-20.5, 15)

[connection signal="frame_changed" from="Ship" to="." method="_on_ship_frame_changed"]
[connection signal="sprite_frames_changed" from="Ship" to="." method="_on_ship_sprite_frames_changed"]
